kubernetes/flask-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: recipe-manager-api
  labels:
    app: recipe-manager
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: recipe-manager
        tier: backend
    spec:
      containers:
      - name: recipe-manager-api
        image: 'us.gcr.io/recipe-manager-175123/recipe-manager-api:latest'
        args:
        - uwsgi
        - --ini
        - uwsgi.ini
        ports:
        - containerPort: 5000
          name: uwsgi
