kubernetes/flask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: recipe-manager-api
  labels:
    app: recipe-manager
spec:
  type: NodePort
  ports:
  - port: 5000
  selector:
    app: recipe-manager
    tier: backend
